:sparkles: add Sequelize features

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^9.2.1",
     "mysql2": "^3.17.0",
     "sequelize": "^6.37.7",
+    "sql": "^0.78.0",
     "uuid": "^13.0.0",
     "winston": "^3.19.0"
   },
